--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "node-telegram-bot-api": "^0.21.1"
+    "http": "0.0.0",
+    "moment": "^2.12.0",
+    "node-telegram-bot-api": "^0.21.1",
+    "xhr": "^2.2.0"
   }
 }
