--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "heroku-node-telegram-bot",
+  "name": "vic-simple-chatbot",
   "version": "1.0.3",
-  "description": "Starter pack for running telegram bot on the Heroku using Node.js",
+  "description": "Simple bot using Node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "switch_to_dev": "export $(cat .env | xargs) && wget --spider https://api.telegram.org/bot$TOKEN/setWebhook?url= --delete-after && node index.js"
   },
-  "author": "Volodymyr Lut",
-  "license": "ISC",
+  "author": "Victor S",
+  "license": "GPL",
   "dependencies": {
     "body-parser": "^1.15.0",
     "dotenv": "^4.0.0",
